--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href="pukes_responsive.html">Puķes</a>
+<a href="./gramatu_plaukts/gramatas.html">grāmatas</a>
 </body>
 </html>
