--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head> 
+    <title>indekss</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GL0PYMNBLS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GL0PYMNBLS');
+</script>
+  </head> 
 <body>
 <a href="./gramatu_plaukts/gramatas.html">grāmatas</a>
 </body>
