--- a/gramatu_plaukts/gramatas.html
+++ b/gramatu_plaukts/gramatas.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Global Site Tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GL0PYMNBLS"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){window.dataLayer.push(arguments);}
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'GA_MEASUREMENT_ID');
-	</script>
+  gtag('config', 'G-GL0PYMNBLS');
+</script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>piemērs PAR GRAMATĀM</title>
 <h1 style="font-size:3vw">Grāmatu plaukts izdalīšanai</h1>
