--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </script>
   </head> 
 <body>
-<a href="./gramatu_plaukts/gramatas.html">gramatas</a>
+<a href="./gramatu_plaukts/gramatas.html">grāmatas</a>
+<a href="./jaunais_tilts/tilts.html">Jaunais tilts</a> 
 </body>
 </html>
